{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 46,
  "lineage": "912f8229-0fd3-ec0d-975f-9456bd6fa687",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004be356841e2448b",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00aebe3838351981f",
            "domain": "vpc",
            "id": "eipalloc-004be356841e2448b",
            "instance": "i-0f26ef8f4fe0102e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-006b1f7ed4af4027d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-152-161-231.compute-1.amazonaws.com",
            "public_ip": "54.152.161.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f6d1c818a402437",
            "associate_with_private_ip": "10.0.3.50",
            "association_id": "eipassoc-06e24a8f00ab22cac",
            "domain": "vpc",
            "id": "eipalloc-07f6d1c818a402437",
            "instance": "i-06990c83246dfce89",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01b5112d80e6bcac8",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-44-207-239-205.compute-1.amazonaws.com",
            "public_ip": "44.207.239.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_network_interface.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:internet-gateway/igw-0ae7ca4a7c5ff5170",
            "id": "igw-0ae7ca4a7c5ff5170",
            "owner_id": "282495905450",
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:network-interface/eni-006b1f7ed4af4027d",
            "attachment": [
              {
                "attachment_id": "eni-attach-0888ed677467cf1f5",
                "device_index": 0,
                "instance": "i-0f26ef8f4fe0102e5"
              }
            ],
            "id": "eni-006b1f7ed4af4027d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:68:e6:63:2a:eb",
            "owner_id": "282495905450",
            "private_dns_name": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0454d1586c9c6d7f7",
              "sg-076d73cb899544345",
              "sg-0c5350f079cab1957",
              "sg-0c5cb7a6c149db76f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0274463f099cd9813"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:network-interface/eni-01b5112d80e6bcac8",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ffd381615fe15124",
                "device_index": 0,
                "instance": "i-06990c83246dfce89"
              }
            ],
            "id": "eni-01b5112d80e6bcac8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:7b:e1:e3:29:d7",
            "owner_id": "282495905450",
            "private_dns_name": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0454d1586c9c6d7f7",
              "sg-0ad016ee79620c208",
              "sg-0c5cb7a6c149db76f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae1bf98bb83957c2"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:route-table/rtb-069882ecfce9ace24",
            "id": "rtb-069882ecfce9ace24",
            "owner_id": "282495905450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae7ca4a7c5ff5170",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "tags_all": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7c593bdcd1c472",
            "route_table_id": "rtb-069882ecfce9ace24",
            "subnet_id": "subnet-0274463f099cd9813"
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d08bd160ddad3e9",
            "route_table_id": "rtb-069882ecfce9ace24",
            "subnet_id": "subnet-0ae1bf98bb83957c2"
          },
          "dependencies": [
            "aws_internet_gateway.simple-web-app",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:security-group/sg-0c5cb7a6c149db76f",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5cb7a6c149db76f",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "282495905450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:security-group/sg-0c5350f079cab1957",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-0c5350f079cab1957",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "282495905450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:security-group/sg-0454d1586c9c6d7f7",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0454d1586c9c6d7f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "282495905450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-staging-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:security-group/sg-076d73cb899544345",
            "description": "Allow Inbound traffic for security checks",
            "egress": [],
            "id": "sg-076d73cb899544345",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Staging",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow-stagin-traffic",
            "name_prefix": "",
            "owner_id": "282495905450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:security-group/sg-0ad016ee79620c208",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-0ad016ee79620c208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "282495905450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:subnet/subnet-0274463f099cd9813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0274463f099cd9813",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282495905450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Jenkins Subnet"
            },
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:subnet/subnet-0ae1bf98bb83957c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae1bf98bb83957c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282495905450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Simple Web App Subnet"
            },
            "tags_all": {
              "Name": "Simple Web App Subnet"
            },
            "vpc_id": "vpc-0b9d3e25f93952dcd"
          },
          "dependencies": [
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:282495905450:vpc/vpc-0b9d3e25f93952dcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030de8223687f2aef",
            "default_route_table_id": "rtb-02bff405c5813a250",
            "default_security_group_id": "sg-0d50602c4b0a7f92b",
            "dhcp_options_id": "dopt-06ecc468330c2420a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9d3e25f93952dcd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bff405c5813a250",
            "owner_id": "282495905450",
            "tags": {
              "Name": "Simple Web App VPC"
            },
            "tags_all": {
              "Name": "Simple Web App VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:282495905450:instance/i-06990c83246dfce89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "simple-web-app",
            "id": "i-06990c83246dfce89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simple-web-app",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01b5112d80e6bcac8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b5112d80e6bcac8",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce32cbf6ac83ff24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae1bf98bb83957c2",
            "tags": {
              "Name": "Simple Web App"
            },
            "tags_all": {
              "Name": "Simple Web App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0454d1586c9c6d7f7",
              "sg-0ad016ee79620c208",
              "sg-0c5cb7a6c149db76f"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.simple-web-app",
            "aws_iam_instance_profile.simple-web-app",
            "aws_iam_policy.ecr-access",
            "aws_iam_role.simple-web-app",
            "aws_key_pair.simple-web-app-key",
            "aws_network_interface.simple-web-app",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:282495905450:instance/i-0f26ef8f4fe0102e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins",
            "id": "i-0f26ef8f4fe0102e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-006b1f7ed4af4027d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006b1f7ed4af4027d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-152-161-231.compute-1.amazonaws.com",
            "public_ip": "54.152.161.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dcb48015a9129677",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0274463f099cd9813",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0454d1586c9c6d7f7",
              "sg-076d73cb899544345",
              "sg-0c5350f079cab1957",
              "sg-0c5cb7a6c149db76f"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.simple-web-app",
            "aws_ecr_repository.simple-web-app-staging",
            "aws_ecr_repository.simple-web-app-test",
            "aws_eip.jenkins",
            "aws_iam_instance_profile.jenkins",
            "aws_iam_instance_profile.simple-web-app",
            "aws_iam_policy.ec2-access",
            "aws_iam_policy.ecr-access",
            "aws_iam_policy.s3-access",
            "aws_iam_policy.secrets-access",
            "aws_iam_role.jenkins",
            "aws_iam_role.simple-web-app",
            "aws_internet_gateway.simple-web-app",
            "aws_key_pair.jenkins-key",
            "aws_key_pair.simple-web-app-key",
            "aws_network_interface.jenkins",
            "aws_network_interface.simple-web-app",
            "aws_s3_bucket.jenkins-config",
            "aws_s3_bucket.simple-web-app-logs",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-staging-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_subnet.subnet-public-web-app",
            "aws_vpc.simple-web-app",
            "module.application-server.aws_instance.default",
            "random_id.job-id"
          ]
        }
      ]
    }
  ]
}